fix: enhance visibility handling for HubSpot widget on teacher pages

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -978,6 +978,13 @@ p a {
 
 #lms-pro #hubspot-messages-iframe-container {
   z-index: 999 !important;
+  display: initial;
+  &.show {
+    display: block !important;
+  }
+  &.hide {
+    display: none !important;
+  }
 }
 
 #hubspot-messages-iframe-container.visible-icon iframe,
